Fixed the showcases text overflow.

--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -74,6 +74,7 @@
 .contact-container {
   background-color: $keitaro-white;
   position: relative;
+  width: 95%;
 }
 
 .contact-container::after {
