--- a/assets/scss/_responsive-md.scss
+++ b/assets/scss/_responsive-md.scss
@@ -165,7 +165,7 @@
 	}
 
 	.showcase-item {
-		bottom: 12rem;
+		bottom: 8rem;
 	}
 
 	.partners-banner {
